# headless-gecko

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
src/headless_geckodriver/: __init__.py  __main__.py  geckodriver.py  headless.py
tests/: test_headless_geckodriver.py
