[tool.poetry]
name = "headless-geckodriver"
version = "0.1.0"
description = "A project for streamlining the installation and implementation of using a headless browser utilizing geckodriver."
authors = ["xransum <xransum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xransum/headless-geckodriver"
repository = "https://github.com/xransum/headless-geckodriver"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
Changelog = "https://github.com/xransum/headless-geckodriver/releases"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
beautifulsoup4 = "^4.12.2"
types-requests = "^2.31.0"
types-beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
selenium = "^4.16.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
coverage = { extras = ["toml"], version = ">=6.3" }
safety = ">=1.10.3"
mypy = ">=0.931"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.17.0"
flake8 = ">=4.0.1"
black = ">=22.3"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=22.1.11"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
pep8-naming = ">=0.12.1"
darglint = { version = ">=1.8.1", python = "< 4" }
pre-commit-hooks = ">=4.1.0"
pytest-datadir = ">=1.3.1"
typing-extensions = ">=4.0.1"
isort = ">=5.10.1"
reorder-python-imports = "^3.12.0"

[tool.poetry.scripts]
headless_driver = "headless_geckodriver.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["headless_geckodriver"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:future.*",      # imp: in favour of importlib
    "ignore::DeprecationWarning:ipwhois.net.*", # dns.resolver.Resolver.resolve: migration to
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
lines_after_imports = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
